# DeepMiRT

./: .gitignore  CITATION.cff  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: ci.yaml
deepmirt/: __init__.py  predict.py
deepmirt/configs/: default.yaml
deepmirt/data_module/: datamodule.py  dataset.py  preprocessing.py
deepmirt/evaluation/: __init__.py  bias_analysis.py  calibration.py  comparison.py  error_analysis.py  predict.py  run_full_evaluation.py  stratified_eval.py  visualization.py
deepmirt/evaluation/configs/: eval_default.yaml
deepmirt/model/: cross_attention.py  mirna_target_model.py
deepmirt/scanning/: __init__.py  _utils.py  output_formatter.py  scanner.py  site_finder.py
deepmirt/tests/: test_smoke.py  test_split_leakage.py  test_unit.py
deepmirt/training/: callbacks.py  lightning_module.py  train.py
examples/: batch_predict.py  predict_example.py
insect_mirna_target/: __init__.py  predict.py
insect_mirna_target/configs/: default.yaml
insect_mirna_target/data_module/: datamodule.py  dataset.py  preprocessing.py
insect_mirna_target/evaluation/: __init__.py  bias_analysis.py  comparison.py  error_analysis.py  metrics.py  predict.py  run_full_evaluation.py  stratified_eval.py  visualization.py
insect_mirna_target/evaluation/configs/: eval_default.yaml
insect_mirna_target/model/: classifier.py  cross_attention.py  rnafm_encoder.py
insect_mirna_target/tests/: test_smoke.py  test_split_leakage.py
insect_mirna_target/training/: callbacks.py  lightning_module.py  train.py
